# SignalDrift

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  routes.py
backend/tests/: conftest.py  test_api.py
frontend/: .dockerignore  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DocumentUpload.test.tsx  DocumentUpload.tsx  HelloWorld.test.tsx  HelloWorld.tsx  Tagline.test.tsx  Tagline.tsx
frontend/src/pages/: AnalysisPage.tsx  HomePage.tsx
